# mys-social-indexer

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 2025_03_06_000001_create_initial_schema.sql
migrations/2025-04-04-090026_add_platform_relationships/: down.sql  up.sql
migrations/20250329000000_create_profiles/: up.sql
migrations/20250330000000_create_initial_tables/: up.sql
migrations/20250330000100_add_encrypted_profile_fields/: up.sql
migrations/20250331200000_rename_avatar_url_to_profile_photo/: up.sql
migrations/20250331224000_create_usernames_table/: up.sql
migrations/20250404000000_remove_blockchain_username_id/: down.sql
migrations/20250404000100_consolidate_profile_tables/: down.sql  up.sql
migrations/20250404000200_remove_username_tables/: down.sql
migrations/20250404000400_add_social_graph/: up.sql
migrations/20250404000500_add_social_graph_events/: up.sql
migrations/20250404000600_fix_social_graph_schema/: up.sql
migrations/20250405000000_remove_blockchain_tx_id/: down.sql  up.sql
migrations/20250406000000_replace_blockchain_tx_hash_with_event_id/: down.sql  up.sql
migrations/20250407000000_fix_counter_defaults/: up.sql
migrations/20250407214300_create_platforms_blocked/: up.sql
migrations/20250407214400_create_profiles_blocked/: up.sql
migrations/20250408000000_fix_social_graph_counters/: up.sql
migrations/20250410000000_add_platform_tables/: up.sql
migrations/20250411000000_add_platform_approval/: up.sql
migrations/20250412000000_add_platform_relationships/: up.sql
migrations/20250415000000_add_platform_memberships/: up.sql
migrations/20250418000000_add_block_list_address/: up.sql
migrations/20250420000000_remove_deprecated_tables/: down.sql  up.sql
migrations/20250421000000_rename_profiles_blocked_columns/: up.sql
migrations/20250422000000_update_platform_blocked_profiles/: down.sql  up.sql
migrations/20250423000000_update_platform_memberships/: down.sql  up.sql
migrations/20250424000000_update_profiles_blocked/: up.sql
src/: config.rs  db.rs  lib.rs  main.rs  schema.rs  worker.rs
src/api/: mod.rs  routes.rs
src/api/handlers/: blocking.rs  health.rs  mod.rs  platforms.rs  profile_events.rs  profiles.rs  social_graph.rs
src/blockchain/: block_list_handler.rs  events.rs  listener.rs  mod.rs  platform_handler.rs  social_graph_handler.rs
src/events/: block_list_events.rs  blocking_events.rs  content_events.rs  fee_events.rs  ip_events.rs  mod.rs  platform_events.rs  profile_event_types.rs  profile_events.rs  social_graph_events.rs
src/models/: block_list.rs  content.rs  fee_distribution.rs  indexer.rs  intellectual_property.rs  mod.rs  platform.rs  profile.rs  profile_events.rs  social_graph.rs  statistics.rs
src/models/blocking/: mod.rs  platform_blocks.rs  profile_blocks.rs
